# cse3000-how-to-break-a-solver

./: .gitignore  .gitmodules  README.md  analyze.py  compare.sh  competition_generated_instances.txt  cse3000.code-workspace  ganak.txt  global_cli.py  log.txt  model_count_mismatches.txt  notes_w8.md  output.csv  pyproject.toml  requirements.txt  rev.sh  slurm-5286090.out  slurm-5286116.out  slurm-5286121.out  slurm-5286464.out  slurm-5286776.out  slurm-5286777.out  slurm-5286793.out  slurm-5286798.out  slurm-5286810.out  slurm-5286829.out  slurm-5313605.out  slurm-5314739.out
SharpVelvet/: brummayer_generated_instances.txt
analythics/: plot_times.py  script.py  sort.py
bram-tool/: process_generated_instances.py
cpog_verifier/: README.md  cli.py  utils.py
cristian-tool/: README.md  cpog_verifier.py  cristian_tool.py  result_analysis_example.ipynb  result_proccessor.py  result_processor.py
csoare_cse3000_configs/: D4.json  ExactMC.json  GPMC.json  Ganak.json  configs.json  seeds.txt  selected_instances.txt
csoare_cse3000_result_analysis/: feature_analysis.ipynb  generate_with_horn.py  helper_functions.py  result_analysis.ipynb  sample_reduction_strategy2.ipynb
delftblue/: 3cnf_400.sh  3cnf_400_1.sh  3cnf_400_2.sh  3cnf_400_3.sh  3cnf_500.sh  3cnf_500_1.sh  3cnf_500_2.sh  3cnf_500_3,sh  4cnf_350.sh  4cnf_400.sh  4cnf_450.sh  4cnf_500.sh  README.md  brummayer.sh  compile_generators.sh  compile_velvet.sh  compute_sat_features.sh  create_conda_env.sh  generate_velvet.sh  run_300_fuzzer_test.sh  run_350_fuzzer_test.sh  run_400_fuzzer_test.sh  run_fuzzer_test.sh  (+33 more)
(+22398 files in other folders)
